force-app/main/default/objects/Exco_Line_Item__c/Exco_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This object will store the bill data linked to a particular Exco. The records in the table will be populated from an external system (C2).</description>
    <label>Exco Line Item</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>Exco Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exco Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>