force-app/main/default/objects/Exco_Line_Item__c/fields/Exco__c.field-meta.xml
<CustomField>
    <fullName>Exco__c</fullName>
    <description>Relationship back to Exco</description>
    <inlineHelpText>Exco associated to this line item</inlineHelpText>
    <label>Exco</label>
    <referenceTo>Exco__c</referenceTo>
    <relationshipLabel>Exco Line Items</relationshipLabel>
    <relationshipName>Exco_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>