force-app/main/default/objects/Exco_Line_Item__c/fields/Exco_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Exco_Line_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Exco Line ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>