force-app/main/default/objects/Exco_Line_Item__c/fields/Points_Date__c.field-meta.xml
<CustomField>
    <fullName>Points_Date__c</fullName>
    <description>This field holds the date for the points record.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Points Date</label>
    <type>Date</type>
</CustomField>